--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/mango.ico">
+  <meta name="description" content="My Learn CS8 Resume">
+  <meta name="author" content="862204799">
 
-  <title>John Doe - Business Administration</title>
+<title>Veronica Fahn - Creative Writing</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Veronica Fahn</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/veronicafahn.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Veronica Fahn
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Creative Writing📚</div>
+        <p class="lead mb-4">I am seeking to expand my professional skillset while attending univerisity. I have taken classes in psychology, philosophy, and now computer science. General skills include: organization, responsible time management, a fast learner, and a creative thinker.<br><br>
 
-        Enter bio here<br><br>
+        As listed below, prior work experience includes background acting on multiple popular networks such as Disney Channel and streaming services such as Hulu and Peacock. These jobs helped me develop patience and teamwork skills.<br><br>
 
-        Enter bio here
+        I have volunteered at schools and environmental services. I also have experience in theater, having worked on stage crew in high school.
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://my.indeed.com/resume?hl=en&co=US&from=gnav-homepage&_ga=2.161705276.162121368.1636065382-1735536954.1636065382">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/vfahn000">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.youtube.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://www.instagram.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,55 +93,52 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Background Acting</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Central Casting</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Worked on "Bunk'd" at Hollywood Center Studios (July 2015)<br> 
+              • Worked on "Saved by the Bell" at Universal Studios (August 2021)<br>
+              • Worked on "The Goldbergs" at Sony Studios (September 2021)<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">July 2015 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer Work</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Multiple Places</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Heal the Bay: cleanup and assortment of trash<br>
+              • Canyon Charter Elementary School: game booth attendant at annual Fiesta festival, worked with children 
+              • Tree People: planting trees and de-weeding native plant gardens<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">April 2016 - May 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Stage Crew</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Palisades Charter High School</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Worked on school productions of "The Great Gatsby," "The Barker," and hit musical "Chicago"<br>
+            • Involved: heavy lifting, mopping and sweeping the stage, organizing sets and props backstage<br>
+            • Communicated with actors and other stagehands to create teamwork and a tightknit community<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">October 2017 - March 2019</span>
           </div>
         </div>
 
-
-
-      </div>
-
+     </div>
     </section>
 
     <hr class="m-0">
@@ -151,34 +149,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">University of California, Riverside</h3>
+            <div class="subheading mb-3">Creative Writing Major</div>
+            <div>BA in Creative Writing (in progress)</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">October 2020- June 2024</span>
           </div>
         </div>
 
@@ -190,16 +166,19 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+<center>
+    <img src="img/barkercrew.jpg" width="500px">
+    <img src="img/gatsbycrew.jpg" width="500px"><br>
+    <img src="img/covidcrew.jpg" width="500px">
+    <img src="img/mummy me 2.png" width="500px"><br>
+</center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Veronica Fahn</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
